# rust-incubator

./: Cargo.toml  README.md
1_concepts/1_1_default_clone_copy/src/: main.rs
1_concepts/1_2_box_pin/: Cargo.toml
1_concepts/1_2_box_pin/src/: main.rs
1_concepts/1_3_rc_cell/src/: main.rs
1_concepts/1_4_cow/: Cargo.toml
1_concepts/1_4_cow/src/: main.rs
1_concepts/1_5_convert_cast_deref/: Cargo.toml
1_concepts/1_5_convert_cast_deref/src/: main.rs
1_concepts/1_6_dispatch/src/: main.rs
1_concepts/1_7_sized/src/: main.rs
1_concepts/1_8_thread_safety/src/: main.rs
1_concepts/1_9_phantom/src/: main.rs
1_concepts/src/: main.rs
2_idioms/: Cargo.toml
2_idioms/2_1_type_safety/src/: main.rs
2_idioms/2_2_mem_replace/src/: main.rs
2_idioms/2_3_bound_impl/src/: main.rs
2_idioms/2_4_generic_in_type_out/: Cargo.toml
2_idioms/2_4_generic_in_type_out/src/: main.rs
2_idioms/2_5_exhaustivity/src/: lib.rs
2_idioms/2_6_sealing/src/: lib.rs  my_error.rs  my_iterator_ext.rs
2_idioms/src/: main.rs
3_ecosystem/: Cargo.toml
3_ecosystem/3_10_threads/: Cargo.toml
3_ecosystem/3_10_threads/src/: main.rs
3_ecosystem/3_11_async/: Cargo.toml
3_ecosystem/3_11_async/src/: main.rs
3_ecosystem/3_1_testing/: Cargo.toml
3_ecosystem/3_1_testing/src/: main.rs
3_ecosystem/3_1_testing/tests/cmd/: test.stdin  test.stdout  test.toml
3_ecosystem/3_2_macro/: Cargo.toml
3_ecosystem/3_2_macro/proc/: Cargo.toml
3_ecosystem/3_2_macro/proc/src/: lib.rs
3_ecosystem/3_2_macro/src/: main.rs
3_ecosystem/3_3_date_time/: Cargo.toml
3_ecosystem/3_3_date_time/src/: main.rs
3_ecosystem/3_4_regex_parsing/: Cargo.toml
3_ecosystem/3_4_regex_parsing/src/: main.rs
3_ecosystem/3_5_collections/: Cargo.toml
3_ecosystem/3_5_collections/src/: main.rs
3_ecosystem/3_6_serde/: Cargo.toml
3_ecosystem/3_6_serde/src/: main.rs
3_ecosystem/3_7_rand_crypto/: Cargo.toml
3_ecosystem/3_7_rand_crypto/src/: main.rs
3_ecosystem/3_8_log/: Cargo.toml
3_ecosystem/3_8_log/src/: main.rs
3_ecosystem/3_9_cmd_env_conf/: Cargo.toml
3_ecosystem/3_9_cmd_env_conf/src/: cli.rs  config.rs  main.rs
3_ecosystem/src/: cli.rs  config.rs  global_client.rs  input_image.rs  main.rs  out_file.rs
4_backend/: Cargo.toml  db.sqlite3  graphiql.html
4_backend/4_1_db/: Cargo.toml
4_backend/4_1_db/migration/: Cargo.toml
4_backend/4_1_db/migration/src/: m20220101_000001_create_table.rs
4_backend/4_1_db/src/: main.rs
4_backend/4_1_db/src/entities/: mod.rs  roles.rs  users.rs  users_roles.rs
4_backend/4_2_http/: Cargo.toml
4_backend/4_2_http/client/: Cargo.toml
4_backend/4_2_http/client/src/: main.rs
4_backend/4_2_http/migration/: Cargo.toml
4_backend/4_2_http/src/: main.rs
4_backend/4_2_http/src/entities/: users.rs
4_backend/4_3_api/: Cargo.toml
4_backend/4_3_api/api_client/: Cargo.toml  README.md
4_backend/4_3_api/api_client/.openapi-generator/: FILES
4_backend/4_3_api/api_client/docs/: CreateRole.md  CreateUser.md  Permissions.md  RoleApi.md  RolesPeriodModel.md  UpdateRole.md  UpdateUser.md  UserApi.md  UserWithRoles.md  UserWithRolesAllOf.md  UsersPeriodModel.md
4_backend/4_3_api/api_client/src/apis/: configuration.rs  mod.rs  role_api.rs  user_api.rs
4_backend/4_3_api/api_client/src/models/: create_role.rs  create_user.rs  mod.rs  permissions.rs  roles_period_model.rs  update_role.rs  update_user.rs  user_with_roles.rs  user_with_roles_all_of.rs  users_period_model.rs
4_backend/4_3_api/client/: Cargo.toml
4_backend/4_3_api/client/src/: main.rs
4_backend/4_3_api/migration/: Cargo.toml
4_backend/4_3_api/src/: main.rs
4_backend/4_3_api/src/entities/: prelude.rs  roles.rs  users.rs
4_backend/migration/: Cargo.toml
4_backend/migration/src/: m20220101_000001_create_table.rs
4_backend/src/: api.rs  db.rs  lib.rs  main.rs  server.rs
4_backend/src/entities/: friends.rs  mod.rs  prelude.rs  users.rs
