[workspace]
members = [
    "1_concepts",
    "1_concepts/1_*",
    "2_idioms",
    "2_idioms/2_*",
    "3_ecosystem",
    "3_ecosystem/3_*",
    "3_ecosystem/3_2_macro/proc",
    "4_backend",
    "4_backend/4_*",
    "4_backend/4_1_db/migration",
    "4_backend/4_2_http/migration",
    "4_backend/4_2_http/client",
    "4_backend/4_3_api/migration",
    "4_backend/4_3_api/client",
    "4_backend/4_3_api/api_client",
    "4_backend/migration",
]
