[package]
name = "step_3"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.72"
async-compat = "0.2.1"
async-stream = "0.3.5"
auto_enums = { version = "0.8.1", features = ["tokio1"] }
bytes = "1.4.0"
clap = { version = "4.3.19", features = ["derive"] }
figment = { version = "0.10.10", features = ["env", "yaml"] }
futures = "0.3.28"
futures-enum = "0.1.17"
isahc = "1.7.2"
mozjpeg = "0.9.6"
once_cell = "1.18.0"
patharg = { version = "0.3.0", features = ["tokio"] }
serde = { version = "1.0.179", features = ["derive"] }
serde_with = "3.1.0"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tokio-rayon = "2.1.0"
tokio-stream = { version = "0.1.14", features = ["io-util"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
