[package]
name = "step_4"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
argon2 = "0.5.1"
async-trait = "0.1.72"
axum = "0.6.19"
juniper = "0.15.11"
rand = "0.8.5"
sea-orm = { version = "0.12.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
