[package]
name = "step_4"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.72"
argon2 = "0.5.1"
async-trait = "0.1.72"
axum = { version = "0.6.19", features = ["headers"] }
hyper = "0.14.27"
jsonwebtoken = "8.3.0"
juniper = "0.15.11"
rand = "0.8.5"
sea-orm = { version = "0.12.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "debug-print"] }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
time = "0.3.25"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = "0.3.17"
ultra-batch = "0.2.0"
