[package]
name = "step_3_11"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
filenamify = "0.1.0"
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
