[package]
name = "step_3_6"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.72"
humantime-serde = "1.1.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.25"
time = { version = "0.3.23", features = ["serde", "formatting", "parsing"] }
toml = "0.7.6"
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde"] }
