[package]
name = "step_4_3_client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
email_address = "0.2.4"
openapi = { path = "../api_client" }
reqwest = "0.11.18"
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
